# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  ex.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml
format/: json.py  plain.py  stylish.py
gendiff/: __init__.py  cli.py  diff_generator.py  engine.py  gendiff.py  generate_diff.py  generate_diff_block.py  parser.py  tree.py  treenode.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/formatters/: formatting.py  json_format.py  normalize.py  plain_format.py  stylish_format.py
gendiff/scripts/: cli.py  gendiff.py  generate_diff.py
hexlet-code/: Makefile  README.md  pyproject.toml
hexlet-code/gendiff/: generate_diff.py
hexlet-code/gendiff/scripts/: gendiff.py  generate_diff.py
tests/: gendiff_test.py  nested_short1.json  nested_short2.json  test_calculate_differense.py  test_gendiff.py  test_openfiles.py
tests/fixtures/: etalon1.txt  file2.json
