[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anton <poverenosn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
